# cubist-hackathon

./: .gitignore  METHODOLOGY_SIMPLIFIED.md  README.md  pyproject.toml
framework/: __main__.py  bootstrap.py  config.py  db.py  events.py  models.py  scheduler.py  schema.sql  services.py  state.py  worktree.py
framework/api/: app.py
framework/cli/: _context.py  commands.py  parser.py  subagent.py
framework/pod/: __main__.py  anthropic_call.py  backend_client.py  prompt.py  tools.py  worker.py
framework/templates/: CLAUDE.md
framework/templates/agents/: development.md  methodology.md  testing.md
tests/: conftest.py  test_api.py  test_bootstrap.py  test_candidates.py  test_claim_concurrency.py  test_cli.py  test_config.py  test_lifecycle.py  test_phase5.py  test_phase6.py  test_pod_cli.py  test_pod_tools.py  test_pod_worker.py  test_schema.py  test_subagent.py  test_two_pod_loops.py  test_worktree.py  test_worktree_lifecycle.py
